adding tip to not use zero values

--- a/regionalEmissionsTarget/regionalEmissionsTarget.html
+++ b/regionalEmissionsTarget/regionalEmissionsTarget.html
@@ -649,6 +649,14 @@ or bunker emissions)</td>
 </ul>
 <hr />
 </div>
+<div id="tips" class="section level3">
+<h3>Tips</h3>
+<ul>
+<li>To set a “zero target,” avoid using exactly 0, as GAMS may disregard
+it. Instead, use a very small value, such as 0.001, to ensure it is
+recognized.</li>
+</ul>
+</div>
 </div>
 </div>
 
